# fits_io

./: pyproject.toml
src/fits_io/: __init__.py  _types.py  client.py  conversion.py  filesystem.py  image_reader.py  image_sequence.py  main.py  metadata.py  provenance.py  tiff_axis_io.py  tiff_channel_io.py  writer.py
src/fits_io/metadata/: builder.py  lut.py  models.py  provenance.py  utils.py
src/fits_io/readers/: _types.py  factory.py  info.py  protocol.py  r_nd2.py  r_tiff.py
src/fits_io/writers/: api.py  core.py  filesystem.py  utils.py  validation.py
tests/: conftest.py  test_conversion.py  test_filesystem.py  test_image_reader.py  test_metadata.py  test_provenance.py  test_reader_utility.py  test_tiff_channel_io.py  test_writer.py
