[project]
name = "fits-io"
version = "0.4.0"
description = "Module to read and write microscopy image files and convert them to FITS-TIFF format."
readme = "README.md"
authors = [
    { name = "Benoit Roux", email = "benoit.roux@gmail.com" }
]
requires-python = ">=3.12, <3.13"
dependencies = [
    "imagecodecs>=2026.1.14",
    "nd2>=0.11.2",
    "tifffile>=2026.1.14",
]

[project.scripts]
fits-io = "fits_io:main"

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
